✅test : docker -compose 코드 추가, loadtest.json 빌드 코드 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,27 @@ services:
     networks:
       - corp
 
+
+  flask_api:
+    container_name: flask_api
+    build:
+      context: ./flask-api  # flask API의 Dockerfile이 있는 경로를 지정해야 합니다.
+      dockerfile: ./Dockerfile
+    ports:
+      - 5000:5000  # flask API의 포트를 지정해야 합니다.
+    networks:
+      - corp
+
+  redis_server:
+    image: redis:latest
+    container_name: redis_server
+    ports:
+      - 13130:13130
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      - corp
+
 networks:
   corp:
     driver: bridge
