chore : ecosystem.config.js 파일 수정 완료

--- a/Backend/FrontEnd/manifest.json
+++ b/Backend/FrontEnd/manifest.json
@@ -4,7 +4,7 @@
       "/index.html",
       "/main.js",
       "/styles.css",
-      "/assets/image.png"
+      "/assets/*.svg"
     ],
     "swSrc": "service-worker.js",
     "swDest": "service-worker.js"
