--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "child-process": "^1.0.2",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.0",
