--- a/Backend/FrontEnd/package.json
+++ b/Backend/FrontEnd/package.json
@@ -17,7 +17,7 @@
     "workbox-precaching": "^7.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "export PORT=3002 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@toolz/allow-react)/\" --env=jsdom --watchAll",
     "eject": "react-scripts eject"
